# external-api

./: .env-clear  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
src/: main.rs  nats.rs  rabbit.rs  utils.rs  work_with_wb_api.rs
src/database_function/: connection_mongo.rs  connection_postgresql.rs  connector.rs  function_mongo.rs  function_postgre.rs  mod.rs
src/jwt/: jwt_structure.rs  mod.rs
src/structure/: mod.rs  parse_structures_v1.rs  parse_structures_v2.rs  receive_structures.rs  send_structures.rs
